home page width fix but recipe image not showing

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ html {
   margin: 0;
   padding: 0;
 }
-/* 
-div {
+
+/* div {
   height: 100%;
   width: 100%;
 } */
